added valid links to make the buttons clickable

--- a/index.html
+++ b/index.html
@@ -102,28 +102,28 @@
           <li class="slip bg-lightblue"> 
            <img src="https://avatars.mds.yandex.net/i?id=c4ba168f06b14ec7d0f12ca95dc8c4143e6a8ddc-10349168-images-thumbs&n=13" alt="gods-tower"> 
            <div class="slip-content"> 
-            <button><h3><a href="">God's Tower</a></h3></button>
+            <button><h3><a href="https://jut.su/kami-tou/">God's Tower</a></h3></button>
             <p>Baam spent most of his life at the mysterious Tower. If you get to the top of it, you can fulfill any dream. It is not easy to do this: dangers and trials await on the floors, which become more complicated with each level. But the boy climbs the Tower to bring back Rachel, the girl who went upstairs to see the stars</p> 
            </div> 
           </li> 
           <li class="slip bg-lightblue"> 
            <img src="https://avatars.mds.yandex.net/i?id=ff70127445f228c45e744b5ebbc01a1641b182ef-10767321-images-thumbs&n=13" alt="friends-game"> 
            <div class="slip-content"> 
-            <button><h3><a href="">Friends Game</a></h3></button>
+            <button><h3><a href="https://jut.su/tomodachi-game/">Friends Game</a></h3></button>
             <p>A significant amount of money that the guys collected to pay for a school trip suddenly disappears in the classroom. Suspicion falls on Makoto Shibe and Shiho Sawaragi, who were given cash. The biggest damage is caused by theft by Yuichi Katagiri, who has been suffering from financial problems all his life.</p> 
            </div> 
           </li> 
           <li class="slip bg-lightblue"> 
            <img src="https://r4.wallpaperflare.com/wallpaper/296/701/125/bocchi-the-rock-anime-anime-girls-hd-wallpaper-a0db9642ca161c530c6eeaf6282d4853.jpg" alt="bocchi-the-rock"> 
            <div class="slip-content"> 
-            <button><h3><a href="">Bocchi The Rock!</a></h3></button>
+            <button><h3><a href="https://jut.su/bocchi-the-rock/">Bocchi The Rock!</a></h3></button>
             <p>Dreaming of playing in a musical group in the future, Hitori Goto took up guitar lessons. But she is so clamped down that she couldn't make a single friend, let alone create her own band. Fate itself decides to help Hitori, and she, fortunately, meets Nijika Ijichi, who plays in her own band and looking for a guitarist!</p> 
            </div> 
           </li> 
           <li class="slip bg-lightblue"> 
               <img src="https://avatars.mds.yandex.net/i?id=4c5d474156c37d0ef88599ba4a4a5d115c3acded-10849343-images-thumbs&n=13" alt="buddy-daddies"> 
               <div class="slip-content"> 
-                <button><h3><a href="">Buddy Daddies</a></h3></button>
+                <button><h3><a href="https://jut.su/buddy-daddies/">Buddy Daddies</a></h3></button>
                <p>The main characters of the story, the mercenary partners, the guys professionally approach each task to eliminate their goals. Once they took up another task, at the end of it, they suddenly become guardians of a 4-year-old girl named Miri, who later turned out to be the illegitimate daughter of their previous target.</p> 
               </div> 
              </li> 
