added comment in HTML and changed the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
  <meta charset="UTF-8"> 
  <meta name="viewport" content="width=>, initial-scale=1.0"> 
- <title>Document</title> 
+ <title>Trash</title> 
  <link rel="stylesheet" href="style.css"> 
  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Montserrat:ital,wght@0,400;0,700;1,300&family=Roboto+Serif:ital,opsz,wght@0,8..144,100;1,8..144,400&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Kanit:wght@300&family=Karla:ital,wght@1,800&family=Montserrat:ital,wght@0,400;0,700;1,300&family=Roboto+Serif:ital,opsz,wght@0,8..144,100;1,8..144,400&display=swap" rel="stylesheet">
@@ -186,7 +186,7 @@
         </section>
 
 
-
+        <!-- Section Seven -->
         <section class="section-seven">
             <div id="enjoy">
                 <div>
